[gd_scene load_steps=5 format=3 uid="uid://bft631n2ufbna"]

[ext_resource type="Script" path="res://Scenes/Unused/PlayerMount.gd" id="1_hn87o"]
[ext_resource type="Texture2D" uid="uid://c8p53ftthjoxa" path="res://Visuals/Kenney Assets/PP tilemap-characters_packed.png" id="2_fh1p8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cj74d"]
radius = 7.0
height = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5okfw"]
radius = 15.0

[node name="PlayerMount" type="CharacterBody2D"]
script = ExtResource("1_hn87o")
max_speed = 200
jump_force = 500
acceleration = 25
jump_stop = 100
metadata/_edit_group_ = true

[node name="RiderContainer" type="Node2D" parent="."]

[node name="RiderPosition" type="Marker2D" parent="."]
position = Vector2(-3, -11)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(6, -2)
texture = ExtResource("2_fh1p8")
hframes = 9
vframes = 3
frame = 21

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(6, -4)
shape = SubResource("CapsuleShape2D_cj74d")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -11)
shape = SubResource("CircleShape2D_5okfw")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
